# galay-tracing

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  b1_disabled_log.cc  b2_enabled_log.cc  b3_span_scope.cc  b4_traceparent.cc  b5_otlp_json_exporter.cc  b6_structured_event.cc  b7_batch_processor_schedule.cc  b8_moodycamel_batch_queue.cc
benchmark/compare/rust-tracing/: Cargo.toml
benchmark/compare/rust-tracing/src/: main.rs
cmake/: galay-tracing-config.cmake.in  option.cmake
docs/: 01-快速开始.md  02-链路上下文.md  03-日志关联.md  04-导出到Collector.md  05-性能测试.md  06-功能边界与路线图.md  release_note.md
docs/plans/: 2026-05-19-docs-and-tracing-gap-plan.md  2026-05-19-galay-tracing-design.md  2026-05-19-galay-tracing-implementation.md
examples/: CMakeLists.txt
examples/import/: e1_log_context.cc  e2_traceparent.cc  e3_otlp_exporter.cc
examples/include/: e1_log_context.cc  e2_traceparent.cc  e3_otlp_exporter.cc
galay-tracing/: CMakeLists.txt
galay-tracing/adapters/: kernel_context.h  spdlog_sink.cc  spdlog_sink.h
galay-tracing/common/: id_format.cc  id_format.h  source_location.h  span_id.h  trace_id.h  tracing_log.h
galay-tracing/context/: context_storage.cc  context_storage.h  trace_context.h  traceparent.cc  traceparent.h
galay-tracing/kernel/: batch_span_processor.cc  batch_span_processor.h  file_span_exporter.cc  file_span_exporter.h  otlp_http_exporter.cc  otlp_http_exporter.h  sampler.cc  sampler.h  span.cc  span.h  span_exporter.h  span_guard.cc  span_guard.h  span_processor.h
galay-tracing/log/: console_sink.cc  console_sink.h  log_level.h  log_record.h  log_sink.h  logger.cc  logger.h
galay-tracing/module/: galay_tracing.cppm  module_prelude.hpp
test/: CMakeLists.txt  t10_base_logger.cc  t1_package_surface.cc  t2_trace_ids.cc  t3_traceparent.cc  t4_span_guard.cc  t5_logger_context.cc  t6_spdlog_sink.cc  t7_batch_processor.cc  t8_kernel_context.cc  t9_otlp_http_exporter.cc
